--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="Vendor/jQuery/jquery.min.js"></script>
-    <script src="Voiture.js"></script>
+    <script src="Vendor/CanvasEngine/canvasengine-1.3.2.all.min.js"></script>
+    <script src="Environnement.js"></script>
+    <script src="Car.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css" >
 </head>
