--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="Vendor/jQuery/jquery.min.js"></script>
     <script src="Environnement.js"></script>
     <script src="Car.js"></script>
+    <script src="Hitbox.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css" >
 </head>
