--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="Toll.js"></script>
     <script src="Lane.js"></script>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="Vendor/bootstrap/css/bootstrap.min.css" >
     <link rel="stylesheet" href="main.css" >
 </head>
 <body>
@@ -17,26 +18,26 @@
         Carte voiture
     </canvas>
 
-    <div name="panneau de contrôle">
+    <div name="panneau de contrôle" id="config_panel">
     <form>
 
         <!-- Démarrage de la scène -->
-        <button id="initEnv" type="button"> Démarrer la scène</button></br></br>
-
+        <button id="initEnv" type="button" class="btn btn-info"><i class="glyphicon glyphicon-off"></i> Démarrer la scène</button>
+        <!-- mettre en pause ou reprendre l'environnement -->
+        <button id="stopEnv" type="button" class="btn btn-info"><i class="glyphicon glyphicon-pause"></i>  Mettre en pause la scène</button>
+        <button id="restartEnv" type="button" disabled="true" class="btn btn-info"><i class="glyphicon glyphicon-play"></i> Reprendre la scène</button><br><br>
         <!-- changer le nombre de voies -->
-        <button id="changeNbVoies" type="button">Changer nombre voies</button>
+        <button id="changeNbVoies" type="button" class="btn btn-info">Changer nombre voies</button>
         <input id="ipt_voies" type="number" value="10" max="10" min="0" style="text-align: center; width:30px;"></br></br>
         <!-- Ajouter voiture -->
-        <button id="addCars" type="button"> Ajouter voiture</button>
-        <input type="range" id="range" value="1" max="5" min="1" ></br></br>
+        <button id="addCars" type="button" class="btn btn-info"><i class="glyphicon glyphicon-plus"></i> Ajouter voiture</button>
+        <input type="range" id="range" value="1" max="5" min="1"  ></br></br>
 
-        <!-- mettre en pause ou reprendre l'environnement -->
-        <button id="stopEnv" type="button"> Mettre en pause la scène</button>
-        <button id="restartEnv" type="button" disabled="true"> Reprendre la scène</button></br></br>
+
 
         <!-- Accélérer ou ralentir la scène -->
-        <button id="fastEnv" type="button"> Accélérer la scène</button>
-        <button id="slowEnv" type="button"> Ralentir la scène</button></br>
+        <button id="fastEnv" type="button" class="btn btn-info"> Accélérer la scène</button>
+        <button id="slowEnv" type="button" class="btn btn-info"> Ralentir la scène</button></br>
 
 
 
