--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="Environnement.js"></script>
     <script src="Car.js"></script>
     <script src="Hitbox.js"></script>
+    <script src="Toll.js"></script>
+    <script src="Lane.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css" >
 </head>
