--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="restartEnv" type="button" disabled="true" class="btn btn-info"><i class="glyphicon glyphicon-play"></i> Reprendre la scène</button><br><br>
         <!-- changer le nombre de voies -->
         <button id="changeNbVoies" type="button" class="btn btn-info">Changer nombre voies</button>
-        <input id="ipt_voies" type="number" value="10" max="10" min="0" style="text-align: center; width:30px;"></br></br>
+        <input id="ipt_voies" type="number" value="10" max="10" min="0"></br></br>
         <!-- Ajouter voiture -->
         <button id="addCars" type="button" class="btn btn-info"><i class="glyphicon glyphicon-plus"></i> Ajouter voiture</button>
         <input type="range" id="range" value="1" max="5" min="1"  ></br></br>
@@ -46,6 +46,17 @@
 
     </form>
 
+    </div>
+
+
+    <div id="preload">
+        <img src="Images/fence.png"    width="1" height="1" name="fence" />
+        <img src="Images/forest.png"   width="1" height="1" name="forest" />
+        <img src="Images/route.jpg"    width="1" height="1" name="road" />
+        <img src="Images/v_blue.png"   width="1" height="1" name="v_blue" />
+        <img src="Images/v_green.png"  width="1" height="1" name="v_green" />
+        <img src="Images/v_red.png"    width="1" height="1" name="v_red" />
+        <img src="Images/v_yellow.png" width="1" height="1" name="v_yellow" />
     </div>
 
 </body>
