--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Carte voiture
     </canvas>
 <form>
-    <input id="ipt_voies" type="number" value="10">
+    <input id="ipt_voies" type="number" value="10" max="10">
     <button id="changeNbVoies" type="button">Changer nombre voies</button>
 
 </form>
