Ajout des boutons de contrôle

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 <form>
     <input id="ipt_voies" type="number" value="10" max="10">
     <button id="changeNbVoies" type="button">Changer nombre voies</button>
+    <button id="addCars" type="button"> Ajouter une voiture</button>
 
+    <button id="initEnv" type="button"> Démarrer la scène</button>
+    <button id="stopEnv" type="button"> Mettre en pause la scène</button>
+    <button id="restartEnv" type="button" disabled="true"> Reprendre la scène</button>
+    <button id="fastEnv" type="button"> Accélérer la scène</button>
+    <button id="slowEnv" type="button"> Ralentir la scène</button>
 </form>
 </body>
 </html>
