--- a/jeu.html
+++ b/jeu.html
@@ -53,7 +53,7 @@
                 <button id="addCars" type="button" class="btn btn-info"><i class="glyphicon glyphicon-plus"></i> Ajouter
                     voiture
                 </button>
-                flux faible <input type="range" id="range" value="1" max="5" min="1"> flux élevé</br></br>
+                flux faible <input type="range" id="range" value="1" max="10" min="1"> flux élevé</br></br>
             </div>
 
 
@@ -64,10 +64,17 @@
             <button id="slowEnv" type="button" class="btn btn-info"><i class="glyphicon glyphicon-hourglass"></i> Ralentir
                 la scène
             </button>
-            </br>
+            </br>      </br>
+
+            <button id="vu3D" type="button" class="btn btn-info">
+                <a href="https://www.youtube.com/watch?v=rU8TAICHzpA" target="_blank"> Péage en 3D !! (bêta)</a>
+            </button>
 
 
         </form>
+        <!-- Accès scène en 3D -->
+
+
 
     </div>
 </div>
