--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color: black; text-align: center">
 <a href="jeu.html" style="margin-top: 200px; position: relative">
 
- <img src="Images/Péage%20SIMULATOR%202015.png">
+ <img src="Images/simulator.png">
 </a>
 </body>
 </html>
